backend_plugin/lib/layout_engine_bindings.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:backend_plugin/layout_engine.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Pointer<ffi.Void> Function()>()
external ffi.Pointer<ffi.Void> init_layout_engine();

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void generate_test_data(ffi.Pointer<ffi.Void> layout_engine);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float)>()
external void zoom(ffi.Pointer<ffi.Void> layout_engine_ptr, double zoom$1);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void zoom_fit(ffi.Pointer<ffi.Void> layout_engine_ptr);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float, ffi.Float)>()
external void pan(
  ffi.Pointer<ffi.Void> layout_engine_ptr,
  double x_um,
  double y_um,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void serialize_library_browser_data(
  ffi.Pointer<ffi.Void> layout_engine,
);

@ffi.Native<ffi.Pointer<ffi.Uint8> Function()>()
external ffi.Pointer<ffi.Uint8> get_browser_data_ptr();

@ffi.Native<ffi.Uint32 Function()>()
external int get_browser_data_size();

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void destroy(ffi.Pointer<ffi.Void> layout_engine_ptr);
